...
  theme: 'theme-light-dark',
  changePassword: 'key',
  manageAccounts: 'account-group',
  about: 'information-outline',
  help: 'help-circle-outline',
  terms: 'file-document-outline',
  logout: 'logout',
};

export default function SettingsPage() {
  const {user, isLoading} = useAuth();

  const {colors} = useTheme();
...
