# logout.yaml

appId: com.barnabas243.CalenTrack
---
- launchApp

- startRecording: logout

- tapOn: 'settings.*'
- tapOn: 'logout'

# redirected to welcome page
- assertVisible: 'Continue with Google'
- assertVisible: 'Continue with Email'

- stopRecording
